--- a/seedsource_core/django/accounts/templates/password_reset_form.html
+++ b/seedsource_core/django/accounts/templates/password_reset_form.html
@@ -1,7 +1,8 @@
+{% load i18n %}
 {% extends 'password_reset_base.html' %}
 
 {% block content %}
-    <h4>Reset Password</h4>
+    <h4>{% trans "Reset Password" %}</h4>
     <div>&nbsp;</div>
     <form method="POST">
         {% csrf_token %}
@@ -18,11 +19,11 @@
                 <tr><td colspan="2"><div class="alert alert-danger">{{ form.password.errors }}</div></td></tr>
             {% endif %}
             <tr>
-                <td><strong>New Password: </strong></td>
+                <td><strong>{% trans "New Password:" %} </strong></td>
                 <td><input type="password" name="password" class="form-control form-inline" /></td>
             </tr>
             <tr>
-                <td><strong>Confirm Password: </strong></td>
+                <td><strong>{% trans "Confirm Password:" %} </strong></td>
                 <td><input type="password" name="confirm" class="form-control form-inline" /></td>
             </tr>
         </table>
