--- a/seedsource_core/django/accounts/templates/password_reset_base.html
+++ b/seedsource_core/django/accounts/templates/password_reset_base.html
@@ -1,9 +1,10 @@
 {% load staticfiles %}
+{% load i18n %}
 
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Seedlot Selection Tool Preview</title>
+        <title>{% trans "Seedlot Selection Tool" %}</title>
 
         <link rel="stylesheet" href="{% static "bootstrap/css/bootstrap.min.css" %}" />
         <link rel="stylesheet" href="{% static "bootstrap/css/bootstrap-theme.min.css" %}" />
