--- a/seedsource_core/django/seedsource/templates/pdf/report.html
+++ b/seedsource_core/django/seedsource/templates/pdf/report.html
@@ -1,3 +1,5 @@
+{% load i18n %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -155,7 +157,7 @@
             <table>
                 <thead>
                     <tr>
-                        <th colspan="2">Match</th>
+                        <th colspan="2">{% trans "Match" %}</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -163,44 +165,51 @@
                         <td rowspan="2">
                             <img class="legend" src="data:image/png;base64,{{ legend_image_data.image_base64 }}" />
                         </td>
-                        <td style="vertical-align: top;">High</td>
+                        <td style="vertical-align: top;">{% trans "High" %}</td>
                     </tr>
                     <tr>
-                        <td style="vertical-align: bottom;">Low</td>
+                        <td style="vertical-align: bottom;">{% trans "Low" %}</td>
                     </tr>
                 </tbody>
             </table>
         </div>
     {% endblock %}
 
-    {% block objective %}<div><strong>Objective:</strong> {{ objective }}</div>{% endblock %}
+    {% block objective %}<div><strong>{% trans "Objective:" %}</strong> {{ objective }}</div>{% endblock %}
 
     <div>&nbsp;</div>
 
     {% block location %}
-        <div><strong>{{ location_label }}</strong> Lat: {{ point.y }}&deg;, Lon: {{ point.x }}&deg;</div>
-        <div><strong>Elevation:</strong> {{ elevation }} ft</div>
+        <div>
+            <strong>{{ location_label }}</strong>
+            {% trans "Lat:" context "Abbreviation of 'Latitude'" %} {{ point.y }}&deg;,
+            {% trans "Lon:" context "Abbreviation of 'Longitude'" %} {{ point.x }}&deg;
+        </div>
+        <div>
+            <strong>{% trans "Elevation:" %}</strong>
+            {% blocktrans with elevation=elevation %}{{ elevation }} ft{% endblocktrans %}
+        </div>
     {% endblock %}
 
     {% block climate %}
-        <h3>Climate scenarios</h3>
-        <div><strong>Seedlot climate:</strong> {{ seedlot_year }}</div>
-        <div><strong>Planting site climate:</strong> {{ site_year }} {{ site_model|default:"" }}</div>
+        <h3>{% trans "Climate scenarios" %}</h3>
+        <div><strong>{% trans "Seedlot climate:" %}</strong> {{ seedlot_year }}</div>
+        <div><strong>{% trans "Planting site climate:" %}</strong> {{ site_year }} {{ site_model|default:"" }}</div>
     {% endblock %}
 
     <div>&nbsp;</div>
 
     {% block transfer %}
         <div>
-            <strong>Transfer limit method:</strong>
+            <strong>{% trans "Transfer limit method:" %}</strong>
             {% if method == 'seedzone' %}
                 {% if center == 'zone' %}
-                    Transfer limits and climatic center based on seed zone
+                    {% trans "Transfer limits and climatic center based on seed zone" %}
                 {% else %}
-                    Transfer limits based on seed zone, climatic center based on the selected location
+                    {% trans "Transfer limits based on seed zone, climatic center based on the selected location" %}
                 {% endif %}
             {% else %}
-                Custom transfer limits, climatic center based on the selected location
+                {% trans "Custom transfer limits, climatic center based on the selected location" %}
             {% endif %}
         </div>
     {% endblock %}
@@ -208,14 +217,14 @@
     {% if method == "seedzone" or method == "function" %}
         <div>&nbsp;</div>
 
-        {% block species %}<div><strong>Species:</strong> {{ species }}</div>{% endblock %}
+        {% block species %}<div><strong>{% trans "Species:" %}</strong> {{ species }}</div>{% endblock %}
 
         <div>&nbsp;</div>
 
         {% if method == "seedzone" %}
             {% block seedzone %}
                 <div>
-                    <strong>Seed zone:</strong> {{ zone }}{% if band %}, {{ band.0 }}' - {{ band.1 }}'{% endif %}
+                    <strong>{% trans "Seed zone:" %}</strong> {{ zone }}{% if band %}, {{ band.0 }}' - {{ band.1 }}'{% endif %}
                 </div>
             {% endblock %}
         {% endif %}
@@ -223,14 +232,14 @@
 
     {% if method == "function" %}
         {% block traits %}
-            <h3>Traits</h3>
+            <h3>{% trans "Traits" %}</h3>
             <div>
                 <table class="variables">
                     <thead>
                         <tr>
-                            <th>Trait</th>
-                            <th>Center</th>
-                            <th>Transfer limit (+/-)</th>
+                            <th>{% trans "Trait" %}</th>
+                            <th>{% trans "Center" %}</th>
+                            <th>{% trans "Transfer limit" %} (+/-)</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -250,14 +259,14 @@
         {% endblock %}
     {% else %}
         {% block variables %}
-            <h3>Climate variables</h3>
+            <h3>{% trans "Climate variables" %}</h3>
             <div>
                 <table class="variables">
                     <thead>
                         <tr>
-                            <th>Variable</th>
-                            <th>Center</th>
-                            <th>Transfer limit (+/-)</th>
+                            <th>{% trans "Variable" %}</th>
+                            <th>{% trans "Center" %}</th>
+                            <th>{% trans "Transfer limit" %} (+/-)</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -284,9 +293,9 @@
                 <table class="variables">
                     <thead>
                         <tr>
-                            <th>Constraint</th>
-                            <th>Center</th>
-                            <th>Range (+/-)</th>
+                            <th>{% trans "Constraint" %}</th>
+                            <th>{% trans "Center" %}</th>
+                            <th>{% trans "Range" %} (+/-)</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -314,7 +323,7 @@
 
     {% block links %}
         <div>
-            <strong>Data URL:</strong>
+            <strong>{% trans "Data URL:" %}</strong>
             <a href="http://cfcg.forestry.ubc.ca/projects/climate-data/climatebcwna/#ClimateWNA">
                 http://cfcg.forestry.ubc.ca/projects/climate-data/climatebcwna/#ClimateWNA
             </a>
