--- a/seedsource_core/django/seedsource/templates/seedsource.html
+++ b/seedsource_core/django/seedsource/templates/seedsource.html
@@ -36,8 +36,8 @@
 <body>
     <div id="SeedsourceApp"></div>
 
-    {% if LANGUAGE_CODE == 'es_MX' %}
-      {% render_bundle 'main-es_MX' 'js' %}
+    {% if LANGUAGE_CODE == 'es-mx' %}
+      {% render_bundle 'main-es-mx' 'js' %}
     {% else %}
       {% render_bundle 'main' 'js' %}
     {% endif %}
