Update bundle name

--- a/seedsource_core/django/seedsource/templates/seedsource.html
+++ b/seedsource_core/django/seedsource/templates/seedsource.html
@@ -37,7 +37,7 @@
     <div id="SeedsourceApp"></div>
 
     {% if LANGUAGE_CODE == 'es-mx' %}
-      {% render_bundle 'main-es-mx' 'js' %}
+      {% render_bundle 'main.es-mx' 'js' %}
     {% else %}
       {% render_bundle 'main' 'js' %}
     {% endif %}
