--- a/seedsource_core/django/seedsource/templates/pdf/report.html
+++ b/seedsource_core/django/seedsource/templates/pdf/report.html
@@ -265,7 +265,13 @@
                     <thead>
                         <tr>
                             <th>{% trans "Variable" %}</th>
-                            <th>{% trans "Center" %}</th>
+                            <th>
+                                {% if custom_mode %}
+                                    {% trans "Custom Value" %}
+                                {% else %}
+                                    {% trans "Center" %}
+                                {% endif %}
+                            </th>
                             <th>{% trans "Transfer limit" %} (+/-)</th>
                         </tr>
                     </thead>
@@ -273,7 +279,14 @@
                         {% for variable in variables %}
                             <tr>
                                 <td>{{ variable.label }}</td>
-                                <td>{{ variable.value }} {{ variable.units|safe }}</td>
+                                <td>
+                                    {% if custom_mode %}
+                                        {{ variable.custom_center }}
+                                    {% else %}
+                                        {{ variable.value }}
+                                    {% endif %}
+                                    {{ variable.units|safe }}
+                                </td>
                                 <td>
                                     {{ variable.limit }} {{ variable.units|safe }}
                                     {% if variable.modified %}(modified){% endif %}
