--- a/seedsource_core/django/seedsource/templates/pdf/report.html
+++ b/seedsource_core/django/seedsource/templates/pdf/report.html
@@ -261,6 +261,10 @@
         {% block variables %}
             <h3>{% trans "Climate variables" %}</h3>
             <div>
+                <em>These results are based on custom climate values rather than the climate at a specific point.</em>
+            </div>
+            <br />
+            <div>
                 <table class="variables">
                     <thead>
                         <tr>
